Refactor HTML structure and improve content presentation across multiple pages
- Updated titles and subtitles for better clarity and SEO optimization in time-management.html and introduction.html.
- Enhanced the layout by introducing article and section elements to improve semantic structure in time-management.html, introduction.html, and personal-values-creation.html.
- Reorganized content into sections and subsections with appropriate headings for better readability and navigation.
- Removed the unused template file and created a new template.html with a standardized structure for future pages.
- Added summary boxes and improved list formatting for key points and practical lessons in personal-values-creation.html.
- Ensured consistent styling and structure across all modified pages to enhance user experience.

--- a/pages/reading-studying/agile-software-development/agile-software-development.html
+++ b/pages/reading-studying/agile-software-development/agile-software-development.html
@@ -2,52 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Agile Software Development</title>
+    <title>Agile Software Development - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>Agile Software Development</h1>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">Agile Software Development</h1>
+            <p class="page-subtitle">Manifesto, mindset, and core principles for adaptive delivery</p>
+        </header>
 
-    <h2>
-        <a href="https://agilemanifesto.org/" target="_blank" rel="noopener noreferrer">Manifesto for Agile Software Development</a>
-    </h2>
-    <ul>
-        <li>Individuals and <b>interactions</b> over processes and tools</li>
-        <li>Working <b>software</b> over comprehensive documentation</li>
-        <li>Customer <b>collaboration</b> over contract negotiation</li>
-        <li>Responding to <b>change</b> over following a plan</li>
-    </ul>
+        <section class="content-section">
+            <h2 class="main-point"><a href="https://agilemanifesto.org/" target="_blank" rel="noopener noreferrer">Manifesto for Agile Software Development</a></h2>
+            <ul class="outline-list">
+                <li>Individuals and <strong>interactions</strong> over processes and tools</li>
+                <li>Working <strong>software</strong> over comprehensive documentation</li>
+                <li>Customer <strong>collaboration</strong> over contract negotiation</li>
+                <li>Responding to <strong>change</strong> over following a plan</li>
+            </ul>
+        </section>
 
-    <h2>
-        Agile Mindset
-    </h2>
-    <ul>
-        <li>Focus on delivering <b>value</b> to the customer</li>
-        <li>Embrace <b>change</b> as a constant</li>
-        <li>Encourage <b>collaboration</b> among team members and stakeholders</li>
-        <li>Prioritize <b>working software</b> as the primary measure of progress</li>
-        <li>Foster a culture of <b>continuous improvement</b></li>
-    </ul>
+        <section class="content-section">
+            <h2 class="main-point">Agile Mindset</h2>
+            <ul class="outline-list">
+                <li>Focus on delivering <strong>value</strong> to the customer</li>
+                <li>Embrace <strong>change</strong> as a constant</li>
+                <li>Encourage <strong>collaboration</strong> among team members and stakeholders</li>
+                <li>Prioritize <strong>working software</strong> as the primary measure of progress</li>
+                <li>Foster a culture of <strong>continuous improvement</strong></li>
+            </ul>
+        </section>
 
-    <h2>
-        <a href="https://agilemanifesto.org/principles.html" target="_blank" rel="noopener noreferrer">
-            12 Principles behind the Agile Manifesto
-        </a>
-    </h2>
-    <ol>
-        <li>Our highest priority is to satisfy the customer through early and continuous delivery of <b>valuable software</b>.</li>
-        <li><b>Welcome changing requirements</b>, even late in development. Agile processes harness change for the customer's competitive advantage.</li>
-        <li><b>Deliver working software frequently</b>, from a couple of weeks to a couple of months, with a preference to the shorter timescale.</li>
-        <li>Business people and developers must <b>work together daily</b> throughout the project.</li>
-        <li>Build projects around <b>motivated individuals</b>. Give them the environment and <b>support they need</b>, and <b>trust them</b> to get the job done.</li>
-        <li>The most efficient and effective method of conveying information to and within a development team is <b>face-to-face conversation</b>.</li>
-        <li><b>Working software</b> is the primary measure of progress.</li>
-        <li>Agile processes promote <b>sustainable development</b>. The sponsors, developers, and users should be able to maintain a constant pace indefinitely.</li>
-        <li>Continuous attention to <b>technical excellence</b> and good design enhances agility.</li>
-        <li>Simplicity—the art of <b>maximizing the amount of work not done</b>—is essential.</li>
-        <li>The best architectures, requirements, and designs emerge from <b>self-organizing teams</b>.</li>
-        <li>At regular intervals, the team reflects on how to <b>become more effective</b>, then tunes and adjusts its behavior accordingly.</li>
-    </ol>
+        <section class="content-section">
+            <h2 class="main-point"><a href="https://agilemanifesto.org/principles.html" target="_blank" rel="noopener noreferrer">12 Principles behind the Agile Manifesto</a></h2>
+            <ol class="numbered-outline">
+                <li>Our highest priority is to satisfy the customer through early and continuous delivery of <strong>valuable software</strong>.</li>
+                <li><strong>Welcome changing requirements</strong>, even late in development. Agile processes harness change for the customer's competitive advantage.</li>
+                <li><strong>Deliver working software frequently</strong>, from a couple of weeks to a couple of months, with a preference to the shorter timescale.</li>
+                <li>Business people and developers must <strong>work together daily</strong> throughout the project.</li>
+                <li>Build projects around <strong>motivated individuals</strong>. Give them the environment and <strong>support they need</strong>, and <strong>trust them</strong> to get the job done.</li>
+                <li>The most efficient and effective method of conveying information to and within a development team is <strong>face-to-face conversation</strong>.</li>
+                <li><strong>Working software</strong> is the primary measure of progress.</li>
+                <li>Agile processes promote <strong>sustainable development</strong>. The sponsors, developers, and users should be able to maintain a constant pace indefinitely.</li>
+                <li>Continuous attention to <strong>technical excellence</strong> and good design enhances agility.</li>
+                <li>Simplicity—the art of <strong>maximizing the amount of work not done</strong>—is essential.</li>
+                <li>The best architectures, requirements, and designs emerge from <strong>self-organizing teams</strong>.</li>
+                <li>At regular intervals, the team reflects on how to <strong>become more effective</strong>, then tunes and adjusts its behavior accordingly.</li>
+            </ol>
+        </section>
+    </article>
+
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
 </body>
