--- a/pages/reading-studying/leadership/assessment-leadership-skills.html
+++ b/pages/reading-studying/leadership/assessment-leadership-skills.html
@@ -2,85 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Assessment-leadership-skills</title>
+    <title>Leadership Skills Assessment - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>Assessment-leadership-skills</h1>
-        <section>
-            <h2>Coaching</h2>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">Leadership Skills Assessment</h1>
+            <p class="page-subtitle">Self-assessment questions to evaluate your leadership capabilities</p>
+        </header>
+
+        <section class="content-section">
+            <h2 class="main-point">Coaching</h2>
             <p>How skilled are you at asking questions that help other people perform better, reach better results, and use more of their potential?</p>
         </section>
 
-        <section>
-            <h2>Delegation</h2>
+        <section class="content-section">
+            <h2 class="main-point">Delegation</h2>
             <p>How good are you at helping others understand what specifically needs to be done, why it needs to be done, and how progress will be measured and evaluated?</p>
         </section>
 
-        <section>
-            <h2>Organizational Knowledge</h2>
+        <section class="content-section">
+            <h2 class="main-point">Organizational Knowledge</h2>
             <p>How well do you know your organization’s vision, overall goals and values, its structure, and how the different parts play together?</p>
         </section>
 
-        <section>
-            <h2>Vision and Strategy</h2>
+        <section class="content-section">
+            <h2 class="main-point">Vision and Strategy</h2>
             <p>How good are you at crafting a vision for your team that aligns with the overall vision and at formulating and planning strategies to fulfill that vision?</p>
         </section>
 
-        <section>
-            <h2>Operations Planning</h2>
+        <section class="content-section">
+            <h2 class="main-point">Operations Planning</h2>
             <p>How skilled are you at planning the operations of an entire team in line with organizational objectives, creating a clear, actionable path that can be precisely evaluated?</p>
         </section>
 
-        <section>
-            <h2>Goal Setting</h2>
+        <section class="content-section">
+            <h2 class="main-point">Goal Setting</h2>
             <p>How well are you able to set specific, measurable, and inspiring goals for yourself and for others?</p>
         </section>
 
-        <section>
-            <h2>Follow Up</h2>
+        <section class="content-section">
+            <h2 class="main-point">Follow Up</h2>
             <p>How skilled are you at following up with others on their goals and planned activities in a way that ensures optimal performance, growth, and acknowledgment?</p>
         </section>
 
-        <section>
-            <h2>Prioritization</h2>
+        <section class="content-section">
+            <h2 class="main-point">Prioritization</h2>
             <p>How good are you at prioritizing your time so you avoid being swamped by ineffective tasks and free time for leading your team and fulfilling organizational responsibilities?</p>
         </section>
 
-        <section>
-            <h2>Motivation</h2>
+        <section class="content-section">
+            <h2 class="main-point">Motivation</h2>
             <p>How well can you inspire yourself and others to go above and beyond by connecting to their sense of purpose and meaning?</p>
         </section>
 
-        <section>
-            <h2>Relationship Building</h2>
+        <section class="content-section">
+            <h2 class="main-point">Relationship Building</h2>
             <p>How skilled are you at building trusting, respectful relationships with team members and others in your organization, including those who are more challenging to engage with?</p>
         </section>
 
-        <section>
-            <h2>Communication</h2>
+        <section class="content-section">
+            <h2 class="main-point">Communication</h2>
             <p>How well can you communicate opinions, ideas, and directives clearly, give and receive constructive feedback, and truly listen with presence and without prejudice?</p>
         </section>
 
-        <section>
-            <h2>Conflict Management</h2>
+        <section class="content-section">
+            <h2 class="main-point">Conflict Management</h2>
             <p>How good are you at surfacing issues, addressing them openly, and resolving them in ways that promote understanding and progress rather than fear or stalemate?</p>
         </section>
 
-        <section>
-            <h2>Decision Making</h2>
+        <section class="content-section">
+            <h2 class="main-point">Decision Making</h2>
             <p>How skilled are you at gathering needed facts promptly and making clear, timely decisions based on those facts and your inner compass for the greater good?</p>
         </section>
 
-        <section>
-            <h2>Performance Appraisals</h2>
+        <section class="content-section">
+            <h2 class="main-point">Performance Appraisals</h2>
             <p>How good are you at regularly evaluating performance and, through mutual responsibility, rewarding beneficial behavior and creating actionable plans to improve less beneficial behavior?</p>
         </section>
 
-        <section>
-            <h2>Authenticity</h2>
-            <p>How willing are you to be your true self in leadership and be open about both your strengths and your shortcomings?</p>
+        <section class="content-section">
+            <h2 class="main-point">Authenticity</h2>
+            <div class="summary-box">
+                <p>How willing are you to be your true self in leadership and be open about both your strengths and your shortcomings?</p>
+            </div>
         </section>
+    </article>
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
 </body>
