--- a/pages/reading-studying/leadership/coaching.html
+++ b/pages/reading-studying/leadership/coaching.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Coaching</title>
+    <title>Coaching - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>Coaching</h1>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">Coaching</h1>
+            <p class="page-subtitle">Essential tips and techniques for effective coaching conversations</p>
+        </header>
 
-    <section>
-        <h2>Tips for Effective Coaching</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Tips for Effective Coaching</h2>
+            <ul class="outline-list">
             <li><strong>Ask open questions:</strong> Invite fuller answers and new perspectives.</li>
             <li><strong>Favor how-questions over why-questions:</strong> "How" keeps the focus on creative, forward steps; "why" often drifts into blame or post-mortems.</li>
             <li><strong>Set your own thoughts aside:</strong> Stay neutral and explore the other person’s view of the situation.</li>
@@ -22,8 +26,8 @@
             <li><strong>Notice body language (yours and theirs):</strong> Posture, tone, and pace often reveal more than words.</li>
             <li><strong>Set timeframes:</strong> Bound the conversation and agree on timelines for actions or follow-ups.</li>
         </ul>
-    </section>
-
+        </section>
+    </article>
 
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
