--- a/pages/reading-studying/leadership/decision-making.html
+++ b/pages/reading-studying/leadership/decision-making.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Decision-making</title>
+    <title>Decision Making - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>Decision-making</h1>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">Decision Making</h1>
+            <p class="page-subtitle">Systematic approaches and frameworks for effective decision making</p>
+        </header>
 
-    <section>
-        <h2>The Eight Steps of Decision Making</h2>
-        <ol>
+        <section class="content-section">
+            <h2 class="main-point">The Eight Steps of Decision Making</h2>
+            <ol class="numbered-outline">
             <li><strong>Step 1: Identify problem:</strong> Define the issue clearly and specifically.</li>
             <li><strong>Step 2: Clarify context:</strong> Understand constraints, stakeholders, and success criteria.</li>
             <li><strong>Step 3: Brainstorm alternatives:</strong> Generate diverse options without judging them yet.</li>
@@ -19,30 +23,30 @@
             <li><strong>Step 6: Check ethics:</strong> Ensure the choice aligns with values, fairness, and integrity.</li>
             <li><strong>Step 7: Implement decision:</strong> Execute with a clear plan, owners, and milestones.</li>
             <li><strong>Step 8: Follow up, learn:</strong> Review outcomes, capture lessons, and adjust as needed.</li>
-        </ol>
-    </section>
+            </ol>
+        </section>
 
-    <section>
-        <h2>Which Domain Are You Making Your Decision In?</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Which Domain Are You Making Your Decision In?</h2>
+            <ul class="outline-list">
             <li><strong>Obvious:</strong> Stable context; cause-and-effect is clear to everyone.</li>
             <li><strong>Complicated:</strong> Multiple right answers; cause-and-effect exists but requires expertise to see.</li>
             <li><strong>Complex:</strong> Patterns emerge only after action; no clear right answer upfront.</li>
             <li><strong>Chaotic:</strong> No discernible order; act to establish stability before deciding.</li>
         </ul>
-    </section>
+        </section>
 
-    <section>
-        <h2>Six Biases That Can Derail Your Decision</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Six Biases That Can Derail Your Decision</h2>
+            <ul class="outline-list">
             <li><strong>Confirmation bias:</strong> Seeking and remembering information that confirms existing beliefs.</li>
             <li><strong>Anchoring bias:</strong> Over-relying on the first piece of information or initial impression.</li>
             <li><strong>Overconfidence bias:</strong> Putting too much faith in your own knowledge, experience, or role.</li>
             <li><strong>Availability bias:</strong> Overestimating likelihood based on vivid, recent, or unusual memories.</li>
             <li><strong>Bandwagon bias:</strong> Adopting opinions or actions mainly because others have done so.</li>
         </ul>
-    </section>
-
+        </section>
+    </article>
 
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
