--- a/pages/reading-studying/leadership/delegation.html
+++ b/pages/reading-studying/leadership/delegation.html
@@ -2,72 +2,76 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Delegation</title>
+    <title>Delegation - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>Delegation</h1>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">Delegation</h1>
+            <p class="page-subtitle">Effective strategies for delegating tasks and empowering your team</p>
+        </header>
 
-    <section>
-        <h2>Three Main Reasons for Delegation</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Three Main Reasons for Delegation</h2>
+            <ul class="outline-list">
             <li>Your team will reach better results.</li>
             <li>It lessens your burden and frees time for strategic work.</li>
             <li>It helps other people grow.</li>
         </ul>
-    </section>
+        </section>
 
-    <section>
-        <h2>Which Tasks to Delegate</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Which Tasks to Delegate</h2>
+            <ul class="outline-list">
             <li><strong>Low effort - High skill:</strong> Often do these yourself; low effort, high expertise—can be a good use of your time.</li>
             <li><strong>High effort - High skill:</strong> Delegate as longer projects to skilled people (or those who can be trained). Expect more involvement early, less later.</li>
             <li><strong>Low effort - Low skill:</strong> Delegate by default; many can do these and keeping them yourself wastes time.</li>
             <li><strong>High effort - Low skill:</strong> Delegate when possible to lower-competence team members as stepping stones for them and for your delegation practice.</li>
         </ul>
-    </section>
+        </section>
 
-    <section>
-        <h2>Four Questions Before Delegating</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Four Questions Before Delegating</h2>
+            <ul class="outline-list">
             <li>Is there someone who has (or can be given) the required knowledge or experience?</li>
             <li>Does the task offer growth or skill development for another person?</li>
             <li>Will this task recur in this or a similar form?</li>
             <li>Can you make time to delegate effectively (train, support, check progress, give feedback)?</li>
         </ul>
-    </section>
+        </section>
 
-    <section>
-        <h2>Who to Delegate To</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Who to Delegate To</h2>
+            <ul class="outline-list">
             <li>Competence level.</li>
             <li>Current workload.</li>
             <li>Level of independence and ambition.</li>
         </ul>
-        <p>Expect initial tasks to take longer for someone new than if you did them yourself.</p>
-    </section>
+            <p>Expect initial tasks to take longer for someone new than if you did them yourself.</p>
+        </section>
 
-    <section>
-        <h2>The Five Steps of Effective Delegation</h2>
-        <ol>
+        <section class="content-section">
+            <h2 class="main-point">The Five Steps of Effective Delegation</h2>
+            <ol class="numbered-outline">
             <li>Specify outcome.</li>
             <li>Set guidelines (framework).</li>
             <li>Provide resources.</li>
             <li>Agree on evaluation/monitoring.</li>
             <li>Offer feedback and recognition.</li>
-        </ol>
-    </section>
+            </ol>
+        </section>
 
-    <section>
-        <h2>The Four Delegation Styles</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">The Four Delegation Styles</h2>
+            <ul class="outline-list">
             <li><strong>Instruct:</strong> For low-skill tasks; will may be high, skill is low.</li>
             <li><strong>Train:</strong> For some skill present; will may be lower, knowledge stronger.</li>
             <li><strong>Coach:</strong> For higher competence; guide rather than direct.</li>
             <li><strong>Monitor:</strong> For highest competence; delegate results, not methods—let them choose how.</li>
         </ul>
-    </section>
-
+        </section>
+    </article>
 
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
