--- a/pages/reading-studying/leadership/time-management.html
+++ b/pages/reading-studying/leadership/time-management.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Time-management</title>
+    <title>Time Management - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>Time-management</h1>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">Time Management</h1>
+            <p class="page-subtitle">Techniques and tools for effective time management and prioritization</p>
+        </header>
 
-    <section>
-        <h2>Time Management Techniques and Tools</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">Time Management Techniques and Tools</h2>
+            <ul class="outline-list">
             <li>Goal setting and prioritization</li>
             <li>Effective scheduling and planning</li>
             <li>Delegation and empowerment</li>
@@ -18,47 +22,53 @@
             <li>Minimizing distractions and interruptions</li>
             <li>Work-life balance and self-care</li>
         </ul>
-    </section>
+        </section>
 
-    <section>
-        <h2>SMART Goals</h2>
-        <ul>
+        <section class="content-section">
+            <h2 class="main-point">SMART Goals</h2>
+            <ul class="outline-list">
             <li><strong>Specific:</strong> Clearly defined and focused.</li>
             <li><strong>Measurable:</strong> Quantifiable and trackable.</li>
             <li><strong>Achievable:</strong> Realistic and attainable.</li>
             <li><strong>Relevant:</strong> Aligned with your broader objectives and values.</li>
             <li><strong>Time-bound:</strong> Set within a specific timeframe.</li>
         </ul>
-    </section>
+        </section>
 
-    <section>
-        <h2>OKRs</h2>
+        <section class="content-section">
+            <h2 class="main-point">OKRs</h2>
         <p><strong>Objectives:</strong> Clear, qualitative descriptions of what you want to achieve.</p>
         <p><strong>Key Results:</strong> Quantitative measures that indicate progress toward your objectives.</p>
-        <h3>Practical Tips</h3>
-        <ol>
+            
+            <div class="sub-section">
+                <h3 class="sub-point-1">Practical Tips</h3>
+                <ol class="numbered-outline">
             <li>Limit the number of objectives and key results to maintain focus.</li>
             <li>Involve your team in the OKR-setting process to foster buy-in and collaboration.</li>
             <li>Set both short-term and long-term OKRs to address immediate needs and strategic objectives.</li>
             <li>Regularly review and update your OKRs to reflect changing priorities and circumstances.</li>
             <li>Encourage open communication and feedback around OKRs within your team.</li>
-        </ol>
-    </section>
+                </ol>
+            </div>
+        </section>
 
-    <section>
-        <h2>The Eisenhower Matrix — Prioritization Made Simple</h2>
-        <ol>
+        <section class="content-section">
+            <h2 class="main-point">The Eisenhower Matrix — Prioritization Made Simple</h2>
+            <ol class="numbered-outline">
             <li>Urgent and Important</li>
             <li>Important but Not Urgent</li>
             <li>Urgent but Not Important</li>
             <li>Neither Urgent nor Important</li>
-        </ol>
-    </section>
+            </ol>
+        </section>
 
-    <section>
-        <h2>Creating a Daily, Weekly, and Monthly Schedule</h2>
-        <p>Define priorities, map them to time blocks, and review regularly to stay aligned with goals.</p>
-    </section>
+        <section class="content-section">
+            <h2 class="main-point">Creating a Daily, Weekly, and Monthly Schedule</h2>
+            <div class="summary-box">
+                <p>Define priorities, map them to time blocks, and review regularly to stay aligned with goals.</p>
+            </div>
+        </section>
+    </article>
 
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
