--- a/pages/reading-studying/pmbok-guide/introduction.html
+++ b/pages/reading-studying/pmbok-guide/introduction.html
@@ -2,31 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Standard for Project Management</title>
+    <title>The Standard for Project Management - My Personal Planet</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
-    <h1>The Standard for Project Management</h1>
+    <article class="content-article">
+        <header class="article-header">
+            <h1 class="page-title">The Standard for Project Management</h1>
+            <p class="page-subtitle">Core concepts and terminology for value-driven project delivery</p>
+        </header>
 
-    <section>
-        <p><strong>The Standard for Project Management</strong> identifies project management principles that guide the behaviors and actions of project professionals and stakeholders engaged with projects.</p>
-    </section>
+        <section class="content-section">
+            <div class="summary-box">
+                <p><strong>The Standard for Project Management</strong> identifies project management principles that guide the behaviors and actions of project professionals and stakeholders engaged with projects.</p>
+            </div>
+        </section>
 
-    <section>
-        <h2>Key Terms and Concepts</h2>
-        <ul>
-            <li><strong>Outcome:</strong> An end result or consequence of a process or project. Outcomes can include outputs and artifacts, but focus on the benefits and value the project aims to deliver.</li>
-            <li><strong>Portfolio:</strong> Projects, programs, subsidiary portfolios, and operations managed as a group to achieve strategic objectives.</li>
-            <li><strong>Product:</strong> A quantifiable artifact that can be an end item itself or a component item.</li>
-            <li><strong>Program:</strong> Related projects, subsidiary programs, and program activities managed in a coordinated manner to obtain benefits not available from managing them individually.</li>
-            <li><strong>Project:</strong> A temporary endeavor undertaken to create a unique product, service, or result. The temporary nature indicates a beginning and an end to the project work or a phase of the work. Projects can stand alone or be part of a program or portfolio.</li>
-            <li><strong>Project Management:</strong> The application of knowledge, skills, tools, and techniques to project activities to meet requirements—guiding project work to deliver intended outcomes using predictive, hybrid, or adaptive approaches.</li>
-            <li><strong>Project Manager:</strong> The person assigned by the performing organization to lead the project team in achieving the project objective—facilitating team delivery and managing processes to realize the outcomes.</li>
-            <li><strong>Project Team:</strong> The group performing the project work. It may include roles beyond the core team (e.g., business representatives, suppliers) needed to deliver the outcomes.</li>
-            <li><strong>System for Value Delivery:</strong> The organizational network of portfolios, programs, projects, and operations that delivers value and enables strategy execution.</li>
-            <li><strong>Value:</strong> The net benefit realized by stakeholders. Value can be tangible or intangible and is defined by the stakeholder context and expectations.</li>
-        </ul>
-    </section>
+        <section class="content-section">
+            <h2 class="main-point">Key Terms and Concepts</h2>
+            <ul class="outline-list">
+                <li><strong>Outcome:</strong> An end result or consequence of a process or project; focuses on benefits and value delivered.</li>
+                <li><strong>Portfolio:</strong> Projects, programs, subsidiary portfolios, and operations managed as a group to achieve strategic objectives.</li>
+                <li><strong>Product:</strong> A quantifiable artifact that can be an end item itself or a component item.</li>
+                <li><strong>Program:</strong> Related projects, subsidiary programs, and program activities managed in a coordinated manner to obtain benefits not available from managing them individually.</li>
+                <li><strong>Project:</strong> A temporary endeavor undertaken to create a unique product, service, or result; can stand alone or be part of a program or portfolio.</li>
+                <li><strong>Project Management:</strong> Application of knowledge, skills, tools, and techniques to meet requirements using predictive, hybrid, or adaptive approaches.</li>
+                <li><strong>Project Manager:</strong> Leads the project team to achieve the objective, facilitating delivery and managing processes to realize outcomes.</li>
+                <li><strong>Project Team:</strong> Group performing the project work; may include roles beyond the core team as needed for outcomes.</li>
+                <li><strong>System for Value Delivery:</strong> Organizational network of portfolios, programs, projects, and operations that delivers value and enables strategy execution.</li>
+                <li><strong>Value:</strong> Net benefit realized by stakeholders, tangible or intangible, defined by context and expectations.</li>
+            </ul>
+        </section>
+    </article>
 
     <!-- Link to external JavaScript file -->
     <script src="../../pages-scripts.js"></script>
