--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     </header>
     <div class="container">
         <nav id="sidebar" class="sidebar" aria-label="Primary">
+            <div class="menu-header" aria-label="Menu header">
+                <a class="menu-home" role="menuitem" href="#/home" data-route="pages/the-planet/about/about.html">
+                    <i class="fas fa-home" aria-hidden="true"></i>
+                    <span>Home</span>
+                </a>
+                <input id="menu-search-input" class="menu-search-input" type="text" placeholder="Search menu..." aria-label="Search menu">
+                <button id="menu-search-toggle" class="menu-search-toggle" aria-label="Toggle menu search" title="Search menu" aria-expanded="false">
+                    <i class="fas fa-search" aria-hidden="true"></i>
+                </button>
+            </div>
             <ul class="menu" role="menu">
                 <!-- Menu will be generated from main-menu.js -->
             </ul>
