--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <div class="container">
         <nav id="sidebar" class="sidebar" aria-label="Primary">
             <div class="menu-header" aria-label="Menu header">
+                <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar" title="Toggle sidebar">
+                    <i class="fas fa-bars" aria-hidden="true"></i>
+                </button>
                 <a class="menu-home" role="menuitem" href="#/home" data-route="pages/the-planet/about/about.html">
                     <i class="fas fa-home" aria-hidden="true"></i>
                     <span>Home</span>
@@ -39,10 +42,6 @@
             <ul class="menu" role="menu">
                 <!-- Menu will be generated from main-menu.js -->
             </ul>
-            <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar" title="Toggle sidebar">
-                <i class="fas fa-chevron-left left-icon" aria-hidden="true"></i>
-                <i class="fas fa-chevron-right right-icon" style="display: none;" aria-hidden="true"></i>
-            </button>
         </nav>
         <main id="main-content">
             <button id="expand-main" class="expand-main" aria-label="Toggle fullscreen" title="Toggle fullscreen">
