Improve AI indicator accessibility by adding title attribute and simplifying text

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="logo-container">
                 <i class="fas fa-globe"></i>
                 <h1 class="logo">My Personal Planet </h1>
-                <div class="ai-indicator">
+                <div class="ai-indicator" title="This planet has been created with the assistance of Artificial Intelligence (AI)">
                     <i class="fas fa-sparkles" aria-hidden="true"></i>
-                    <span title="This planet has been created with the assistance of Artificial Intelligence (AI)">AI</span>
+                    <span>AI</span>
                 </div>
             </div>
             <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
