Add language toggle functionality and Vietnamese menu support

--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
                     <span>AI</span>
                 </div>
             </div>
-            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
-                <span class="slider"></span>
-            </button>
+            <div class="header-controls">
+                <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language" title="Switch language">
+                    <span class="lang-option lang-en">🇬🇧 EN</span>
+                    <span class="lang-option lang-vn">🇻🇳 VN</span>
+                    <span class="lang-slider"></span>
+                </button>
+                <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
+                    <span class="slider"></span>
+                </button>
+            </div>
         </div>
     </header>
     <div class="container">
@@ -53,6 +60,7 @@
     </div>
     <!-- Link to menu definition -->
     <script src="main-menu.js"></script>
+    <script src="main-menu-vn.js"></script>
     <!-- Link to external JavaScript file -->
     <script src="scripts.js"></script>
 </body>
