Refactor language toggle: update button design with flag icons and adjust dimensions

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
             </div>
             <div class="header-controls">
                 <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language" title="Switch language">
-                    <span class="lang-option lang-en">🇬🇧 EN</span>
-                    <span class="lang-option lang-vn">🇻🇳 VN</span>
+                    <span class="lang-option lang-en" title="English">
+                        <span class="flag-icon flag-gb"></span>
+                    </span>
+                    <span class="lang-option lang-vn" title="Tiếng Việt">
+                        <span class="flag-icon flag-vn"></span>
+                    </span>
                     <span class="lang-slider"></span>
                 </button>
                 <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
