Add new poetry pages for Lưu Trọng Lư, Chế Lan Viên, and Xuân Diệu
- Created HTML pages for the following poems:
  - "Tiếng Thu" by Lưu Trọng Lư
  - "Xuân" by Chế Lan Viên
  - "Đây Mùa Thu Tới", "Muộn Màng", "Nguyệt Cầm", "Thơ Duyên", "Tình Thứ Nhất", "Vì Sao", "Vội Vàng", and "Yêu" by Xuân Diệu
- Each page includes structured content with headers, stanzas, and notes.
- Added appropriate metadata and linked stylesheets for consistent formatting.

--- a/pages/literature/poetry/nguyen-binh/tuong-tu-nguyen-binh.html
+++ b/pages/literature/poetry/nguyen-binh/tuong-tu-nguyen-binh.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tương Tư - My Personal Planet</title>
-    <link rel="stylesheet" href="../../pages-styles.css">
-    <link rel="stylesheet" href="../../poetry-style.css">
+    <link rel="stylesheet" href="../../../pages-styles.css">
+    <link rel="stylesheet" href="../../../poetry-style.css">
 </head>
 <body>
     <article class="poetry-article">
         <!-- Poetry Header -->
         <header class="poetry-header">
             <h1 class="poem-title">Tương Tư</h1>
-            <p class="poem-author">Nguyễn Bình</p>
+            <p class="poem-author">Nguyễn Bính</p>
             <p class="poem-meta">Thơ dân gian • Truyền thống Việt Nam</p>
         </header>
 
@@ -57,12 +57,13 @@
         <!-- Poetry Footer / Notes -->
         <footer class="poetry-footer">
             <p class="poem-notes">
-                <strong>Ghi chú:</strong> Bài thơ được cho là sáng tác bởi Nguyễn Bình, là một bài thơ dân gian Việt Nam cổ điển. Nó thể hiện tình yêu tương tư giữa hai thôn Đoài và thôn Đông, với những hình ảnh giản dị nhưng sâu sắc về khoảng cách, nhớ thương và nỗi buồn tình yêu.
+                <strong>Ghi chú:</strong> Bài thơ được cho là sáng tác bởi Nguyễn Bính, là một bài thơ dân gian Việt Nam cổ điển. Nó thể hiện tình yêu tương tư giữa hai thôn Đoài và thôn Đông, với những hình ảnh giản dị nhưng sâu sắc về khoảng cách, nhớ thương và nỗi buồn tình yêu.
             </p>
         </footer>
     </article>
 
     <!-- Link to pages scripts -->
-    <script src="../../pages-scripts.js"></script>
+    <script src="../../../pages-scripts.js"></script>
 </body>
 </html>
+
