--- a/pages/literature/poetry/xuan-dieu/nguyet-cam-xuan-dieu.html
+++ b/pages/literature/poetry/xuan-dieu/nguyet-cam-xuan-dieu.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nguyệt cầm - My Personal Planet</title>
-	<link rel="stylesheet" href="../../pages-styles.css">
-	<link rel="stylesheet" href="../../poetry-style.css">
+	<link rel="stylesheet" href="../../../pages-styles.css">
+	<link rel="stylesheet" href="../../../poetry-style.css">
 </head>
 <body>
 	<article class="poetry-article">
@@ -56,6 +56,6 @@
 	</article>
 
 	<!-- Link to pages scripts -->
-	<script src="../../pages-scripts.js"></script>
+	<script src="../../../pages-scripts.js"></script>
 </body>
 </html>
