--- a/pages/literature/poetry/tac-gia-khac/Nho-rung-The-Lu.html
+++ b/pages/literature/poetry/tac-gia-khac/Nho-rung-The-Lu.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nhớ Rừng - Thế Lữ</title>
-	<link rel="stylesheet" href="../../pages-styles.css">
-	<link rel="stylesheet" href="../../poetry-style.css">
+	<link rel="stylesheet" href="../../../pages-styles.css">
+	<link rel="stylesheet" href="../../../poetry-style.css">
 </head>
 <body>
 	<article class="poetry-article">
@@ -86,6 +86,6 @@
 		</footer>
 	</article>
 
-	<script src="../../pages-scripts.js"></script>
+	<script src="../../../pages-scripts.js"></script>
 </body>
 </html>
